--- a/public/insideGroups.css
+++ b/public/insideGroups.css
@@ -413,7 +413,7 @@ button:disabled {
     top: 0;
     left: 0;
     right: 0;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid blue;
