Fixing the routing issues

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
                     <div class="info">
                     <h2>Create A Study Group</h2>
                     <p>Let's make new friends and study with them</p>
-                    <a href="/creategroup" class="btn">Click Me</a>
+                    <a href="/login/home/creategroup" class="btn">Click Me</a>
                     </div>
                 </div>
                 <div class="box">
@@ -28,7 +28,7 @@
                     <div class="info">
                         <h2>View Your Kudu Groups</h2>
                         <p>See your teams, Chat with them and Enjoy the platform</p>
-                        <a href="/group" class="btn">Click Me</a>
+                        <a href="/login/home/group" class="btn">Click Me</a>
                         <script></script>
                     </div>
                 </div>
