--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -18,7 +18,7 @@
             <span class="fa fa-search"></span>
         </div>
         <ol>
-            <li><a href="/home">home</a></li>
+            <li><a href="/login/home">home</a></li>
             <li><a href="/profile">profile</a></li>
             <li><a href="#">contact us</a></li>
             <li><a href="#">about</a></li>
