--- a/views/createGroupForm.html
+++ b/views/createGroupForm.html
@@ -11,7 +11,7 @@
     <div class="header">
         <h2>Make a New Group</h2>
     </div>
-<form action="/creategroup" method="post" class="form">
+<form action="/login/home/creategroup" method="post" class="form">
   <div class="form-control">
     <label for="fname">User Email Address:</label>
     <input type="email" id="email" name="email" placeholder="i.e example@gmail.com" required><br><br>
