--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -47,8 +47,8 @@
         <div class="modal">
             <div class="modalContent">
                 <p> Please enter the Date and Time of the meeting below: </p>
-                <input type="date" required>
-                <input type="time" required>
+                <input type="date" id="meetingDate" required>
+                <input type="time" id="meetingTime" required>
                 <input type="submit" id="faceMeetingBtn" value="Send Invite">
                 <button class="closeBtn" id="faceMeetingModalBtn">&times;</button>
             </div>
