Wrapping up the issues with routing

--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -31,11 +31,11 @@
     <section></section>
     <div class="nav_bar">
         <ul>
-            <li><a href="insidegroups.html">Chats</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="files.html">Files</a></li>
-            <li><a href="classNotes.html" id="onlink">Meetings</a></li>
-            <li><a href="poll.html">Polls</a></li>
+            <li><a href="/login/home/group/chat">Chats</a></li>
+            <li><a href="/login/home/group/team">Team</a></li>
+            <li><a href="/login/home/group/files">Files</a></li>
+            <li><a href="/login/home/group/notes" id="onlink">Meetings</a></li>
+            <li><a href="/login/home/group/poll">Polls</a></li>
         </ul>
     </div>
 
