--- a/views/grouppage.html
+++ b/views/grouppage.html
@@ -57,19 +57,19 @@
         <div class="box">
             <div class="info">
             <h2>WITS ELITE</h2>
-            <a href="/group/content" class="btn">Click Me</a>
+            <a href="/login/home/group/chat" class="btn">Click Me</a>
             </div>
         </div>
         <div class="box">
             <div class="info">
                 <h2>1234 START</h2>
-                <a href="/group/content" class="btn">Click Me</a>
+                <a href="/login/home/group/chat" class="btn">Click Me</a>
             </div>
         </div>
         <div class="box">
             <div class="info">
                 <h2>WAS GUD</h2>
-                <a href="/group/content" class="btn">Click Me</a>
+                <a href="/login/home/group/chat" class="btn">Click Me</a>
             </div>
         </div>
         <div class="box">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <h2>LECTURER.INC</h2>
-                <a href="/group/content" class="btn">Click Me</a>
+                <a href="/login/home/group/chat" class="btn">Click Me</a>
             </div>
         </div>
     </div>
