--- a/views/poll.html
+++ b/views/poll.html
@@ -29,11 +29,11 @@
     <section></section>
     <div class="nav_bar">
         <ul>
-            <li><a href="insidegroups.html">Chats</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="files.html">Files</a></li>
-            <li><a href="classNotes.html">Meetings</a></li>
-            <li><a href="poll.html" id="onlink">Polls</a></li>
+            <li><a href="/login/home/group/chat">Chats</a></li>
+            <li><a href="/login/home/group/team">Team</a></li>
+            <li><a href="/login/home/group/files">Files</a></li>
+            <li><a href="/login/home/group/notes">Meetings</a></li>
+            <li><a href="/login/home/group/poll" id="onlink">Polls</a></li>
         </ul>
     </div>
     
