Search and view existing groups

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,7 @@
             <button onclick="updatePhysicalAddress()" id="updateBtn">Update</button>
         </div>
         <div>
-            <!--<a href="/existingGroups" class="btn">View Existing Groups</a>-->
+            <a href="/existingGroups" class="btn">View Existing Groups</a>
         </div>
         <div>
             <a href="/group" class="btn">View MY Groups</a>
