--- a/views/poll.html
+++ b/views/poll.html
@@ -46,7 +46,7 @@
           <label>If you are not satisfied with a group member you can create a poll to terminate their membership here.</label>
         <form class="form" id="form">
             <div class="form-control">       
-                <input type="text" id="myUsername" placeholder="Username of proposed member" name="username" required>
+                <input type="text" id="myUsername" placeholder="Proposed member username" name="username" required>
             </div>
             <div class="form-control">
                 <input type="text" id="myReason" placeholder="Enter your reason for membership termination request" required/>
