--- a/views/terminationPoll.html
+++ b/views/terminationPoll.html
@@ -4,9 +4,11 @@
     <title>Member Poll</title>
     <link rel="stylsheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="../public/votingStyle.css"> -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 <body>
-    <h1 id = myHeading>Vote in each termination poll here</h1>
+    <h1 id = myHeading>Vote for each termination poll here</h1>
+    <button id="view">Generate List</button>
 <div class="poll">
   <div class="question"></div>
   <div class="answers"></div>
