--- a/views/existingGroups.html
+++ b/views/existingGroups.html
@@ -10,6 +10,11 @@
     <body>
         <div class="container">
             <h1>Existing Groups</h1>
+            <div>
+                <input type="text" id="groupname" placeholder="Group Name" >
+                <button onclick="applyGroup()" id="btn">Apply to Group</button>
+                <a href="/profile" class="btn">Go to Profile</a>
+            </div>
             <div id="searchWrapper">
                 <input
                     type="text"
