Taking group application data

--- a/views/existingGroups.html
+++ b/views/existingGroups.html
@@ -11,8 +11,9 @@
         <div class="container">
             <h1>Existing Groups</h1>
             <div>
+                <input type="text" id="username" placeholder="Username" >
                 <input type="text" id="groupname" placeholder="Group Name" >
-                <button onclick="applyGroup()" id="btn">Apply to Group</button>
+                <button onclick="applyGroup()" id="btn">Apply to Goup</button>
                 <a href="/profile" class="btn">Go to Profile</a>
             </div>
             <div id="searchWrapper">
