User Groups Appear in database

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -223,8 +223,8 @@ h1 {
 }
 
 .box {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     padding: 2rem 1rem;
     background-color:rgb(226, 243, 243);
     position: relative;
@@ -251,6 +251,20 @@ h1 {
 }
 
 .box .info .btn:hover{
+    box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+}
+
+.box .info .leave{
+    text-decoration: none;
+    padding: 0.5rem 0.25rem;
+    background: #fff;
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.box .info .leave:hover{
     box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
 }
 
@@ -287,6 +301,18 @@ h1 {
     box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
 }
 
+.box .info .leave-left {
+    left: 0.4em;
+}
+
+.box .info .leave-right {
+    right: 0.4em;
+}
+
+.box .info .leave-left, .leave-right {
+    position: absolute;
+    top: 0.24em;
+}
 
 .box .info .dropdown {
     display: inline-block;
