Moved chat messages to the top of the screen

--- a/views/insidegroups.html
+++ b/views/insidegroups.html
@@ -4,7 +4,7 @@
 <head>
     <title>Inside Group Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">    
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/css/insideGroups.css">
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
 </head>
@@ -51,7 +51,7 @@
         <!-- Socket.io script-->
         <script src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="/chat.js"></script>
-        <script type="module" src="./acceptDecline.js"></script>
-        <script type="module" src="./covidForm.js"></script>
+        <!-- <script type="module" src="./acceptDecline.js"></script>
+        <script type="module" src="./covidForm.js"></script> -->
     </div>
 </body>
