Comment and Update

--- a/views/applicationPoll.html
+++ b/views/applicationPoll.html
@@ -7,7 +7,7 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 <body>
-    <h1 id = myHeading>Vote for each termination poll here</h1>
+    <h1 id = myHeading>Vote for each member application poll here</h1>
     <button id="view">Generate List</button>
 <div class="poll">
   <div class="question"></div>
