--- a/public/covidForm.css
+++ b/public/covidForm.css
@@ -1,13 +1,34 @@
 /* Send Invite Styling */
+* {
+    margin:0;
+    padding:0;
+    font-family: consolas;
+    box-sizing: border-box;
+}
+
+.body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #001925;
+}
+
+.h1 {
+    text-align:center;
+}
+/*
+p {
+
+}
 
 .covidModal {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(7, 6, 6, 0.5);
     width: 100%;
     height: 100%;
     /* Makes the modal a percentage of the actual screen instead of the container */
-    position: fixed;
+  /* position: fixed;
     /* Allows modal to move with screen when the screen is scrolled*/
-    top: 0;
+  /*  top: 0;
     left: 0;
     right: 0;
     display: none;
@@ -15,8 +36,8 @@
     align-items: center;
     border: 1px solid blue;
     border: 10px;
-}
-
+}*/
+/*
 .covidModalContent {
     height: 45%;
     width: 45%;
@@ -28,9 +49,9 @@
     align-items: center;
 }
 
-
+*/
 /* Closing button */
-
+/*
 .closeBtn {
     position: absolute;
     top: 0px;
@@ -41,4 +62,4 @@
     outline: none;
     background: none;
     font-weight: bolder;
-}
+}*/
