Styling the home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,9 +8,13 @@
   <link rel="stylesheet" type="text/css" href="/css/home.css">
     </head>
         <body>
+            <div class="backgrd">
+            <div class="square">
             <h1>Welcome to my Kudu Buddy <%= name%></h1>
+            </div>
             <div class="container">
                 <div class="box">
+                    <img src="../utils/group-picture.jpg">
                     <div class="info">
                     <h2>Create A Study Group</h2>
                     <p>Let's make new friends and study with them</p>
@@ -18,6 +22,7 @@
                     </div>
                 </div>
                 <div class="box">
+                    <img src="../utils/view-profile.jpg">
                     <div class="info">
                         <h2>View Your Profile</h2>
                         <p>See your study groups, friends and status</p>
@@ -25,6 +30,7 @@
                     </div>
                 </div>
                 <div class="box">
+                    <img src="../utils/speech-bubbles.jpg">
                     <div class="info">
                         <h2>View Your Kudu Groups</h2>
                         <p>See your teams, Chat with them and Enjoy the platform</p>
@@ -33,6 +39,7 @@
                     </div>
                 </div>
                 <div class="box">
+                    <img src="../utils/onlineMeeting.jpg">
                     <div class="info">
                         <h2>Send an Invite</h2>
                         <p>Generate links or code to send to students to join the kudu fun</p>
@@ -45,5 +52,6 @@
             <button type="submit">Log Out</button>
             </div>
         </form>
+        </div>
         </body>
 </html>
