--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,12 +3,26 @@
     font-family: 'Lato', sans-serif; 
 }
 
+.backgrd {
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(../../utils/background.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+
+
 h1 {
-    position:absolute; left:70px; top:10px;
+    width: 85%;
+    margin: auto;
+    padding: 35px 0;
+    display:flex;
+    align-items: center;
+    justify-content:center;
 }
 
 body {
-    background-color:cornflowerblue ;
     color: white;
     display: flex;
     align-items: center;
@@ -25,7 +39,21 @@ body {
     color: darkcyan;
     display: block;
     font-family: inherit;
-    font-size: 14px;
+    font-size: 20px;
+    padding: 10px;
+    width: 10%;
+    position:absolute; left:80px; top:550px;
+}
+
+.myFormClass button[type=submit]:hover {
+    background-color: cornflowerblue;
+    border: 2px solid cornflowerblue;   
+    border-radius: 4px;
+    color: #fff;
+    text-shadow:nonel;
+    display: block;
+    font-family: inherit;
+    font-size: 20px;
     padding: 10px;
     width: 10%;
     position:absolute; left:80px; top:550px;
@@ -67,7 +95,7 @@ body {
     display: block;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(0,176,155,0.5), rgb(198, 235, 247));
+    background: linear-gradient(to bottom, rgba(0,0,0,0.75),rgba(0,0,0,0.75));
     z-index: 2;
     transition: 0.5s all;
     opacity: 0;
@@ -75,6 +103,15 @@ body {
 
 .box:hover:before {
     opacity: 1;
+}
+
+.box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .box .info{
