SCRUM board for Sprint #4

--- a/views/sendInvite.html
+++ b/views/sendInvite.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Invite Friends</title>
-<link rel="stylesheet" href="../public/form.css">
+<link rel="stylesheet" type="text/css" href="/css/form.css">
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <script defer src="../src/sendInvite.js"></script>
 </head>
