--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,7 +17,7 @@ $(document).ready(function () {
     var autocomplete;
     autocomplete = new google.maps.places.Autocomplete((document.getElementById(searchInput)), {
         types: ['geocode'], componentRestrictions: {
-        country: "SA"
+        country: "ZA"
     }
     });
 	
